atividade front end
celular com varias abas

--- a/celular/index.html
+++ b/celular/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -116,6 +117,7 @@
     <h2 class="borda3">R$699,90</h2>
     <h2 class="borda4">R$499,90</h2>
     <div class="rodapé">Aceitamos todos os cartões! Aceitamos Pix!</div>
-   
 </body>
+<a href="produtos.html">produtos</a>
+
 </html>
